fixed: remove card wrapping image field to avoid unintentional styling

--- a/core/src/FieldTypeImage/FieldTypeImage.less
+++ b/core/src/FieldTypeImage/FieldTypeImage.less
@@ -27,6 +27,7 @@
   .FieldTypeImageContent {
     display: flex;
     flex-wrap: wrap;
+    margin: 16px;
   }
   .FieldTypeImageFooter {
     flex-direction: row-reverse;
